# prime-uve

./: .coverage  .gitignore  CLAUDE.md  LICENSE  README.MD  README.md  prime-uve.code-workspace  pyproject.toml
.claude/: settings.local.json
.github/: RELEASE_PROCESS.md
.github/workflow_example/: check-release-version.yml  lint-fix.yml  release.yml  test.yml
.github/workflows/: README.md  TEST.md  check-release-version.yml  claude-code-review.yml  config.env  lint-fix.yml  release.yml  test.yml
_todo/: README.md  todo.md
_todo/completed/2025-12-03/: PHASE-1-SUMMARY.md  PHASE-2-SUMMARY.md  (+5 more)
_todo/pending/: architecture-design.md  prune-all-fix.md  register-command.md  task-3.3-prime-uve-list.md  task-3.5-prime-uve-activate.md  vscode-configure-improvements.md
_todo/proposal/: list-improvements.md  prune-all-fix.md  task-1.1-path-hashing.md  task-2.1-uve-wrapper.md  task-3.1-cli-framework.md  task-3.2-init-command.md  task-3.2-prime-uve-init.md  task-3.3-list-command.md  task-3.3-prime-uve-list.md  task-3.4-prune-command.md  task-3.5-activate-command.md  task-3.6-configure-vscode.md  task-3.6-prime-uve-configure-vscode.md  untracked-venvs-detection.md
tests/: test_cache.py  test_env_file.py  test_paths.py  test_project.py  test_uve_wrapper.py
tests/test_cli/: test_activate.py  test_configure.py  test_decorators.py  test_init.py  test_list.py  test_main.py  test_output.py  test_prune.py  test_shell.py
tests/test_core/: test_env_file_preserve.py
tests/test_integration/: test_init_workflow.py
tests/test_utils/: test_shell.py  test_vscode.py
(+24 files in other folders)
