[project]
name = "prime-uve"
version = "0.1.0"
description = "A thin wrapper for uv with external venv management"
readme = "README.md"
authors = [
    { name = "kompre", email = "s.follador@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "filelock>=3.20.0",
    "click>=8.0.0",
]

[project.scripts]
prime-uve = "prime_uve.cli.main:main"
uve = "prime_uve.uve.wrapper:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.7",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
